Work better on Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(DEBUG_ENABLED DEBUG_ENABLED DEBUG_MEMORY_ENABLED)
 set(TOOLS_ENABLED TOOLS_ENABLED)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+add_compile_definitions(NOMINMAX)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/sample/addons/com_chibifire_openvdb/bin/osx.64)
 add_library(com_chibifire_openvdb
             SHARED
@@ -21,13 +22,14 @@ target_include_directories(com_chibifire_openvdb
                             "thirdparty/godot-cpp/include"
                              "thirdparty/godot-cpp/include/gen"
                             "thirdparty/godot-cpp/godot_headers"
-                            /usr/local/Cellar/openvdb/6.1.0/include/
                             "thirdparty/godot/modules/gdnative/include"
                             "thirdparty/godot-cpp/include"
                             "thirdparty/godot-cpp/include/gen"
                             "thirdparty/godot-cpp/godot_headers"
                             "thirdparty/godot-cpp/include/core"
-                            "thirdparty/openvdb/openvdb/tools"
+                            "thirdparty/openvdb/openvdb/tools"   
+                            C:/tools/vcpkg/installed/x86-windows/include
+                            /usr/local/Cellar/openvdb/6.1.0/include/
                             /usr/local/include)
 
 if(APPLE)
@@ -37,19 +39,27 @@ ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/godot-cpp/bin/libgodot-cpp.osx.release.64
 /usr/local/opt/tbb/lib/libtbb.dylib
 /usr/local/opt/ilmbase/lib/libHalf.dylib
 "-framework Cocoa")
-elseif(MSVC)
-target_link_libraries(com_chibifire_openvdb
-${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/godot-cpp/bin/libgodot-cpp.windows.release.64.lib)
-else(UNIX)
-target_link_libraries(com_chibifire_openvdb
-${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/godot-cpp/bin/libgodot-cpp.linux.release.64.a)
-endif()
-
-file(COPY sample DESTINATION .)
-
 set_target_properties( com_chibifire_openvdb
     PROPERTIES
     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/sample/addons/com_chibifire_scene_optimize/lib/mac/"
     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/sample/addons/com_chibifire_scene_optimize/lib/mac/"
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/sample/addons/com_chibifire_scene_optimize/lib/mac/"
 )
+elseif(MSVC)
+target_link_libraries(com_chibifire_openvdb
+${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/godot-cpp/bin/libgodot-cpp.windows.release.default
+"C:/tools/vcpkg/installed/x86-windows/lib/openvdb.lib"
+"C:/tools/vcpkg/installed/x86-windows/lib/tbb.lib"
+"C:/tools/vcpkg/installed/x86-windows/lib/Half-2_3_s.lib")
+set_target_properties(com_chibifire_openvdb
+    PROPERTIES
+    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/sample/addons/com_chibifire_scene_optimize/lib/win/"
+    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/sample/addons/com_chibifire_scene_optimize/lib/win/"
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/sample/addons/com_chibifire_scene_optimize/lib/win/"
+)
+else(UNIX)
+target_link_libraries(com_chibifire_openvdb
+${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/godot-cpp/bin/libgodot-cpp.linux.release.64.a)
+endif()
+
+file(COPY sample DESTINATION .)
